--- a/.github/workflows/quick.yml
+++ b/.github/workflows/quick.yml
@@ -119,7 +119,8 @@ jobs:
 
       - name: Install package
         run: |
-            pip install -e .[pgmpy]
+            pip install -e .
+            pip install pgmpy
 
       - name: Test with pytest & coverage
         run: pytest -vv
