Trying to disable loading of CUDA packages

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -61,5 +61,5 @@ jobs:
 
       - name: Run pytest with pgmpy
         run: |
-          pip install pgmpy
+          pip install pgmpy cpuonly
           pytest -v .
