--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,6 +28,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: List files
+        run: |
+             pwd
+             ls -F 
+
       # Cache the conda environment
       - name: Cache conda environment
         uses: actions/cache@v4
