--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,7 +41,7 @@ jobs:
             ~/conda_pkgs_dir
             ~/.conda
             ~/miniconda3/envs
-          key: conda-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('dev_environment.yml') }}
+          key: conda-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('dev_environment.yml', '*/dev_environment.yml') }}
           restore-keys: |
             conda-${{ matrix.os }}-${{ matrix.python-version }}-
             conda-${{ matrix.os }}-
