--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -10,10 +10,10 @@ dependencies:
   - munch
   - numpy
   - pandas
-  - pip
+  - pip:
+    - pytoulbar2
   - pyomo
   - pytorch
   - cpuonly
-  - pytoulbar2
   - pytest
   - pytest-cov
