--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -13,7 +13,7 @@ dependencies:
   - pip
   - pip:
     - pytoulbar2
-    - -e git+https://github.com/sandialabs/or_topas.git
+    - -e git+https://github.com/sandialabs/or_topas
   - pyomo
   - pytorch
   - cpuonly
