--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -96,8 +96,8 @@ jobs:
 
       - name: Install pgmpy and run pytest
         run: |
-          pip install pytorch
-          pip install cpuonly
+          conda install pytorch
+          conda install cpuonly
           pip install pgmpy
           pytest -v .
 
@@ -192,8 +192,8 @@ jobs:
       - name: Install package
         run: |
             pip install -e .
-            pip install pytorch
-            pip install cpuonly
+            conda install pytorch
+            conda install cpuonly
             pip install pgmpy
 
       - name: Test with pytest & coverage
