Reworking solver config logic

--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -6,12 +6,12 @@ channels:
   - pytorch
 dependencies:
   - flake8
-  - highs
   - munch
   - numpy
   - pandas
   - pip
   - pip:
+    - highspy
     - pytoulbar2
     - -e git+https://github.com/sandialabs/or_topas.git#egg=or_topas
   - pyomo
