--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -91,15 +91,14 @@ jobs:
       - name: Install package
         run: pip install -e .
 
-      - name: Test with pytest
-        run: pytest -v conin
-
-      - name: Install pgmpy and run pytest
+      - name: Install pgmpy
         run: |
           conda install pytorch
           conda install cpuonly
           pip install pgmpy
-          pytest -v conin
+
+      - name: Test with pytest
+        run: pytest -v conin
 
   mip-solver-tests:
     needs: format-check
